--- a/config.properties
+++ b/config.properties
@@ -5,7 +5,7 @@ hrDbPassword=hr
 
 
 # Docuport DB Related Info
-#docuportDbUrl=jdbc:postgresql://35.222.62.70:5432/postgres
+docuportDbUrl=jdbc:postgresql://35.222.62.70:5432/postgres
 docuportDbUsername=tstadmin
 docuportDbPassword=pamBam-Gagmon-85tmrw
 
@@ -18,3 +18,4 @@ docuport_advisor_password=Group1
 
 docuport_supervisor_username=b1g1_supervisor@gmail.com
 docuport_supervisor_password=Group1
+
